# entrez-rs

./: Cargo.toml  README.md
doc/: README.html
src/: errors.rs  eutils.rs  lib.rs
src/eutils/: parser.rs
src/eutils/parser/: esearch.rs  pubmed.rs
src/parser/: esearch.rs  pubmed.rs
tests/: esearch_test.rs
