[package]
name = "entrez-rs"
version = "0.1.0"
authors = ["Suneej Nair <suneejnair@gmail.com>"]
edition = "2018"
description = "Rust wrapper for the Entrez API"

repository = "https://github.com/Zenleaf/entrez-rs.git"

readme = "README.md"
keywords = ["entrez", "bioinformatics", "pubmed", "gene", "blast", "ncbi", "entrezpy", "biorust"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["bioinformatics", "parsing", "gene", "medical"]
license = "MIT"



[dependencies]
reqwest = { version = "0.10.8", features = ["json"]}
tokio   = { version = "0.2", features = ["full"]}
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.20.0", features = [ "serialize" ] }


