[package]
name = "entrez-rs"
version = "0.1.0"
authors = ["Suneej Surendran-Nair <suneejnair@gmail.com>"]
description = "Rust wrapper for the Entrez API"

repository = "https://github.com/Zenleaf/entrez-rs.git"

readme = "README.md"
keywords = ["entrez", "bioinformatics", "pubmed", "gene", "ncbi"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["science", "parsing", "api-bindings"]
license = "MIT"



[dependencies]
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.20.0", features = [ "serialize" ] }


