[package]
name = "entrez-rs"
version = "0.1.4"
authors = ["Suneej Surendran-Nair <suneejnair@gmail.com>"]
description = "Rust wrapper for the Entrez API"
edition   = "2018"
repository = "https://github.com/Zenleaf/entrez-rs.git"

readme = "README.md"
keywords = ["entrez", "bioinformatics", "pubmed", "gene", "ncbi"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
categories = ["science", "parsing", "api-bindings"]
license = "MIT"



[dependencies]
roxmltree = "0.13.0"
serde = { version = "1.0", features = [ "derive" ] }
quick-xml = { version = "0.20.0", features = [ "serialize" ] }
reqwest = { version = "0.10", features = ["blocking"]}



